--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,9 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <!-- Inter Rapidisimo colors -->
+    <color name="ir_black_main">#04040C</color>
+    <color name="ir_white_main">#ffffff</color>
+    <color name="ir_orange_main">#ca6107</color>
 </resources>
