--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -6,4 +6,8 @@
     </style>
 
     <style name="Theme.PruebaInterRapidisimo" parent="Base.Theme.PruebaInterRapidisimo" />
+
+    <style name="Theme.PruebaInterRapidisimo.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+
+    <style name="Theme.PruebaInterRapidisimo.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 </resources>
