--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -6,6 +6,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <ProgressBar
+        android:id="@+id/progress_circular"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"/>
+
     <TextView
         android:id="@+id/User"
         android:layout_width="wrap_content"
@@ -13,7 +21,7 @@
         android:layout_marginTop="24.dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/progress_circular"
         tools:text="jcpd" />
 
     <TextView
@@ -34,15 +42,6 @@
         app:layout_constraintTop_toBottomOf="@+id/Name"
         tools:text="123456789" />
 
-    <TextView
-        android:id="@+id/Version"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="30.sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/Id"
-        tools:text="123456789" />
 
     <Button
         android:id="@+id/buttonTables"
